fix decor z-index

--- a/web/scenes/OwnGrowTransition/components/Hero/hero.module.scss
+++ b/web/scenes/OwnGrowTransition/components/Hero/hero.module.scss
@@ -19,6 +19,7 @@
     line-height: 130%;
     text-align: center;
     text-transform: uppercase;
+    z-index: 1;
     @media (min-width: $md) {
         font-size: $font-size-xxl;
         line-height: 108%;
@@ -31,6 +32,7 @@
     flex-wrap: wrap;
     max-width: 672px;
     margin: 28px auto 23px;
+    z-index: 1;
     @media (min-width: $md) {
         margin-top: 41px;
     }
