--- a/web/scenes/OwnGrowTransition/components/Proposal/proposal.module.scss
+++ b/web/scenes/OwnGrowTransition/components/Proposal/proposal.module.scss
@@ -77,6 +77,7 @@
 
 .itemImage {
     width: 48px;
+    min-width: 48px;
     height: 48px;
     margin-right: 32px;
 }
